--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
                                 alt="Imagem do jogo League of Legends">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                                <img 
+                                src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" 
+                                alt="Imagem do jogo Counter-Strike.">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
