--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <li>
                             <a 
                             target="_blank"
-                            href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                            href="https://www.twitch.tv/directory/game/Minecraft">
                                 <img 
-                                src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" 
-                                alt="Imagem do jogo Counter-Strike.">
+                                src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-144x192.jpg" 
+                                alt="Imagem do jogo Minecraft.">
                             </a>
                         </li>
                     </ul>
